--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .header{
     border: 1px solid blue;
     height:88px;
+    display:flex;
+    justify-content:space-around;
+    align-items:center;
 }
 
 .myIcons{
