--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
 
 .myIcons {
     font-size: 100px;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
 }
 
 .text {
