--- a/style.css
+++ b/style.css
@@ -1,18 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Honk&display=swap');
 
+html, body {
+    height: 100%; /* Ensure the page takes full viewport height */
+    margin: 0; /* Remove default margin */
+    padding: 0; /* Remove default padding */
+}
+
 .header {
+    position: fixed; /* Make the header fixed position */
+    bottom: 0; /* Align it to the bottom */
+    left: 0; /* Align it to the left */
+    width: 100%; /* Make it span the full width of the viewport */
     border: 1px solid blue;
-    height: 88px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around; /* Distribute space evenly around the items */
     align-items: center;
 }
 
 .myIcons {
-    font-size: 100px;
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
+    font-size: 100px; /* Adjust icon size as needed */
 }
 
 .text {
@@ -21,4 +27,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: calc(100% - 88px); /* Height minus the header height */
+    margin: 0;
 }
