--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html, body {
 
 .header {
     position: fixed; /* Make the header fixed position */
+    top: 80%;
     bottom: 0; /* Align it to the bottom */
     left: 0; /* Align it to the left */
     width: 100%; /* Make it span the full width of the viewport */
